ultimas mudancas- tudo funcionando